--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
     }
     h1 {
       color: #333;
@@ -24,6 +25,7 @@
       margin-bottom: 0.5em;
       letter-spacing: 2px;
       text-shadow: 2px 2px 8px #fff8;
+      z-index: 1;
     }
     button {
       background: #43c6ac;
@@ -35,6 +37,7 @@
       cursor: pointer;
       box-shadow: 0 4px 14px #43c6ac44;
       transition: background 0.3s, transform 0.2s;
+      z-index: 1;
     }
     button:hover {
       background: #191654;
@@ -46,6 +49,7 @@
       color: #191654;
       min-height: 2em;
       transition: color 0.3s;
+      z-index: 1;
     }
     .emoji {
       font-size: 2rem;
@@ -59,10 +63,21 @@
       color: #333a;
       font-size: 1rem;
       letter-spacing: 1px;
+      z-index: 1;
+    }
+    #colorTrailCanvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      width: 100vw;
+      height: 100vh;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
+  <canvas id="colorTrailCanvas"></canvas>
   <h1>🌟 Welcome to My Creative Webpage! 🌟</h1>
   <button onclick="showMessage()">Surprise Me!</button>
   <p id="message"></p>
@@ -81,6 +96,51 @@
       const msg = messages[Math.floor(Math.random() * messages.length)];
       document.getElementById('message').innerHTML = msg;
     }
+
+    // Colorful mouse trail animation
+    const canvas = document.getElementById('colorTrailCanvas');
+    const ctx = canvas.getContext('2d');
+    let width = window.innerWidth;
+    let height = window.innerHeight;
+    canvas.width = width;
+    canvas.height = height;
+
+    window.addEventListener('resize', () => {
+      width = window.innerWidth;
+      height = window.innerHeight;
+      canvas.width = width;
+      canvas.height = height;
+    });
+
+    let trail = [];
+
+    document.addEventListener('mousemove', function(e) {
+      trail.push({
+        x: e.clientX,
+        y: e.clientY,
+        hue: Math.floor(Math.random() * 360),
+        alpha: 1,
+        radius: Math.random() * 12 + 8
+      });
+      if (trail.length > 60) trail.shift();
+    });
+
+    function animateTrail() {
+      ctx.clearRect(0, 0, width, height);
+      for (let i = 0; i < trail.length; i++) {
+        const t = trail[i];
+        ctx.beginPath();
+        ctx.arc(t.x, t.y, t.radius, 0, 2 * Math.PI);
+        ctx.fillStyle = `hsla(${t.hue}, 80%, 60%, ${t.alpha})`;
+        ctx.fill();
+        t.alpha *= 0.93;
+        t.radius *= 0.97;
+      }
+      // Remove faded circles
+      trail = trail.filter(t => t.alpha > 0.05 && t.radius > 1);
+      requestAnimationFrame(animateTrail);
+    }
+    animateTrail();
   </script>
 </body>
 </html>
